--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,19 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="stand">Select your stand</string>
+    <string name="block">Select your block</string>
+    <string name="row">Select your row</string>
+    <string name="seat">Select your seat</string>
+    <string name="next">Next</string>
+
+    <string-array name="stand_array">
+        <item>IPL South Stand</item>
+        <item>Novia Financial Stand</item>
+        <item>Thatcher\'s Terrace East</item>
+        <item>Thatcher\'s Terrace West</item>
+        <item>Riverside Terracing</item>
+        <item>Wadworth 6X Stand</item>
+        <item>Centurion Stand</item>
+    </string-array>
 
 </resources>
